# craftsman

./: .gitignore  AGENTS.md  README.md  SPEC.delta.md  SPEC.md  craftsman.toml  dist-workspace.toml  install.sh
cli/: Cargo.toml  build.rs  dist-workspace.toml
cli/src/: adr.rs  config.rs  doctor.rs  ledger.rs  ledger_tests.rs  lib.rs  main.rs  plan.rs  session.rs  spec.rs
cli/src/bootstrap/: adopt.rs  import.rs  init.rs  mod.rs  templates.rs  update.rs
cli/src/codegen/: a11y.rs  bash.rs  mod.rs  steps.rs  swift.rs
cli/src/commands/: bootstrap.rs  docs.rs  gate.rs  ledger.rs  mod.rs  plan.rs  session.rs  spec.rs  spec_delta.rs  verify.rs
cli/src/config/: mod.rs  settings.rs  tests.rs
cli/src/docs/: cache.rs  docc.rs  dts.rs  fetch.rs  lockfiles.rs  mod.rs  objects_inv.rs  rustdoc.rs  search.rs  sources.rs  sync.rs
cli/src/doctor/: fixture.rs  mod.rs
cli/src/gates/: adapter.rs  arch.rs  baseline.rs  check_all.rs  epilogue.rs  health.rs  lint.rs  mod.rs  mutate.rs  qa.rs  runtime.rs  scope.rs  security.rs  tools.rs
cli/src/session/: receipt.rs
cli/src/spec/: delta.rs
cli/src/verify/: impact.rs  mod.rs  normalize.rs  record.rs  selection.rs  stacks.rs
cli/tests/: adapters.rs  adr_stale.rs  bootstrap.rs  codegen.rs  contract.rs  contract_offline.rs  docs_live.rs  docs_objects_inv.rs  doctor.rs  lint_changed.rs  mutate.rs  normalize_fixtures.rs  runtime_gates.rs  security_gates.rs  spec.rs  verify_orchestration.rs  xcodebuild.rs
cli/tests/fixtures/: bash-junit.xml  biome-report.json  msgs.ndjson  py-junit.xml  rust.json  swift-ev-undefined.jsonl  (+2 more)
(+191 files in other folders)
