[package]
name = "craftsman"
version = "0.0.1"
edition = "2024"
description = "The Craftsman Dev CLI — mechanical verification for agentic development"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
