[package]
name = "craftsman"
version = "0.1.0"
edition = "2024"
description = "The Craftsman Dev CLI — mechanical verification for agentic development"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
gherkin = "0.16"
grep = "0.4.1"
ignore = "0.4.30"
include_dir = "0.7.4"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dev-dependencies]
cucumber = { version = "0.23", features = ["output-json"] }
tempfile = "3.27.0"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "spec"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
